--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
+    "react-native-snackbar": "^2.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
