--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.10",
     "react-native-snackbar": "^2.9.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
